sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departPos' in definition of vehicle '1' is empty.
Error: Invalid departPos definition for vehicle '1';
 must be one of ("random", "random_free", "free", "base", "pwagSimple", "pwagGeneric", "maxSpeedGap", or a float)
Quitting (on error).
